# Moments-based-Object-Recognition

./: .gitignore  CMakeLists.txt  readme.txt
data/: features.csv
include/: CMakeLists.txt  Makefile  cmake_install.cmake  processing.cpp  processing.hpp
src/: main.cpp
